# neuropeer-backend

./: .gitignore  NEUROPEER_SPEC.md  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  run_real_inference.py  setup.sh  test_pipeline.py
backend/: .env.example  Dockerfile  config.py  migrate.py  requirements.txt
backend/api/: main.py  websocket.py
backend/api/routes/: analyze.py  campaigns.py  compare.py  export.py  profile.py  results.py
backend/models/: db.py  schemas.py
backend/pipeline/: ai_feedback.py  atlas_mapping.py  campaign_naming.py  ingestion.py  marketer_profile.py  metric_engine.py  neural_score.py  remote_gpu.py  tribe_inference.py
backend/worker/: tasks.py
datacrunch-inference-image/: Dockerfile
docs/: PRODUCTION_ROADMAP.md
