[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuropeer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    # Job Queue
    "celery>=5.4.0",
    "redis>=5.0.8",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.13.2",
    # Storage
    "boto3>=1.35.20",
    # ML / Inference
    "torch>=2.4.0",
    "transformers>=4.44.2",
    "huggingface-hub>=0.24.6",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
    # Remote GPU (DataCrunch A100 spot instances)
    "datacrunch",
    # Neuroscience
    "nilearn>=0.10.4",
    "nibabel>=5.2.1",
    # Audio / Video
    "yt-dlp>=2024.8.6",
    "ffmpeg-python>=0.2.0",
    # Transcription (ElevenLabs Scribe v2)
    "elevenlabs>=1.0.0",
    # Utilities
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "pyarrow>=17.0.0",
    "reportlab>=4.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP007", "UP042", "B905", "E741", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"test_pipeline.py" = ["E402"]
"backend/worker/tasks.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
